@@ -38,7 +38,7 @@ our @EXPORT_OK   = qw(
     %ADDRESSBOOK_HOME_SET %CALENDAR_HOME_SET $PRINCIPAL_COLLECTION_SET
     $ENABLE_TRASH $TRASH_FOLDER $SHOW_STAT $HEADER $CONFIGFILE
     $ENABLE_SEARCH $ENABLE_GROUPDAV
-    @DB_SCHEMA $CREATE_DB %TRANSLATION $LANG $MAXNAVPATHSIZE
+    @DB_SCHEMA $CREATE_DB %TRANSLATION $LANG
     $THUMBNAIL_WIDTH $ENABLE_THUMBNAIL $ENABLE_THUMBNAIL_CACHE $THUMBNAIL_CACHEDIR $ICON_WIDTH
     $ENABLE_BIND $LANGSWITCH
     $DBI_PERSISTENT $DB $CM $CONFIG $D $L
@@ -54,7 +54,7 @@ our @EXPORT_OK   = qw(
     @VISIBLE_TABLE_COLUMNS @ALLOWED_TABLE_COLUMNS %QUOTA_LIMITS @EXTENSIONS %EXTENSION_CONFIG @SUPPORTED_VIEWS %ERROR_DOCS %AUTOREFRESH
     %SUPPORTED_LANGUAGES $DEFAULT_LOCK_TIMEOUT
     @EVENTLISTENER $SHOWDOTFILES $SHOWDOTFOLDERS $FILETYPES @DEFAULT_EXTENSIONS @AFS_EXTENSIONS @EXTRA_EXTENSIONS @PUB_EXTENSIONS @DEV_EXTENSIONS
-    $OPTIMIZERTMP $READBUFSIZE $BACKEND_INSTANCE $EVENT_CHANNEL $ALLOW_PATHINPUT
+    $OPTIMIZERTMP $READBUFSIZE $BACKEND_INSTANCE $EVENT_CHANNEL $ALLOW_PATHINPUT $MAXQUICKNAVELEMENTS
 );
 
 #{
@@ -77,7 +77,7 @@ use vars qw(
     %ADDRESSBOOK_HOME_SET %CALENDAR_HOME_SET $PRINCIPAL_COLLECTION_SET
     $ENABLE_TRASH $TRASH_FOLDER $SHOW_STAT $HEADER $CONFIGFILE
     $ENABLE_SEARCH $ENABLE_GROUPDAV
-    @DB_SCHEMA $CREATE_DB %TRANSLATION $LANG $MAXNAVPATHSIZE
+    @DB_SCHEMA $CREATE_DB %TRANSLATION $LANG
     $THUMBNAIL_WIDTH $ENABLE_THUMBNAIL $ENABLE_THUMBNAIL_CACHE $THUMBNAIL_CACHEDIR $ICON_WIDTH
     $ENABLE_BIND $LANGSWITCH
     $DBI_PERSISTENT $DB $CM $CONFIG
@@ -93,7 +93,7 @@ use vars qw(
     @VISIBLE_TABLE_COLUMNS @ALLOWED_TABLE_COLUMNS %QUOTA_LIMITS @EXTENSIONS %EXTENSION_CONFIG @SUPPORTED_VIEWS %ERROR_DOCS %AUTOREFRESH
     %SUPPORTED_LANGUAGES $DEFAULT_LOCK_TIMEOUT
     @EVENTLISTENER $SHOWDOTFILES $SHOWDOTFOLDERS $FILETYPES @DEFAULT_EXTENSIONS @AFS_EXTENSIONS @EXTRA_EXTENSIONS @PUB_EXTENSIONS @DEV_EXTENSIONS
-    $OPTIMIZERTMP $READBUFSIZE $BACKEND_INSTANCE $EVENT_CHANNEL $ALLOW_PATHINPUT
+    $OPTIMIZERTMP $READBUFSIZE $BACKEND_INSTANCE $EVENT_CHANNEL $ALLOW_PATHINPUT $MAXQUICKNAVELEMENTS
     $ALLOW_FOLDERUPLOAD
 );
 
@@ -114,8 +114,8 @@ sub init_defaults {
     $FANCYINDEXING      = 1;
     $ENABLE_COMPRESSION = 1;
     $VHTDOCS            = "_webdavcgi_/$RELEASE/";
-    $MAXFILENAMESIZE    = 40;
-    $MAXNAVPATHSIZE     = 50;
+    $MAXFILENAMESIZE    = 10;
+    $MAXQUICKNAVELEMENTS = 3;
     $ALLOW_PATHINPUT    = 0;
     %ICONS     = ( default => '${VHTDOCS}views/simple/icons/blank.png' );
     $FILETYPES = <<'EOF'
