@@ -18,16 +18,16 @@
 <!--IF($config(ALLOW_POST_UPLOADS))-->
 <li class="action upload access-writeable uibutton" title="$tl(upload) (&le; $maxuploadsizehr)" aria-label="$tl(upload) (&le; $maxuploadsizehr)" accesskey="u">$tl(fileuploadbutton)</li>
 <!--ENDIF-->
-<li class="sel-none hideit"><div id="quicknav" class="ws">$[quicknavpath]</div>
+<!--IF($config(ENABLE_CLIPBOARD))-->			
+<li class="action paste uibutton" title="$tl(paste)" aria-label="$tl(paste)" accesskey="v"></li>
+<!--ENDIF-->
+<li class="sel-none hideit"><div id="quicknav">$[quicknavpath]</div>
 	<!--IF($config(ALLOW_PATHINPUT))-->
 	<form id="pathinputform" action="#" method="post"><span id="pathinput" class="hidden"><input type="text" size="50" name="uri" value="$uri"/><button>$tl(go)</button></span></form>
 	<!--ENDIF-->
 </li>
 <!--IF($config(ALLOW_PATHINPUT))-->
 <li class="action changedir sel-none hideit uibutton" title="$tl(changedir)" aria-label="$tl(changedir)"></li>
-<!--ENDIF-->
-<!--IF($config(ENABLE_CLIPBOARD))-->			
-<li class="action paste uibutton" title="$tl(paste)" aria-label="$tl(paste)" accesskey="v"></li>
 <!--ENDIF-->
 <!--IF($config(ENABLE_BOOKMARKS))-->
 <li class="toolbar-spacer action addbookmark sel-none hideit uibutton" title="$tl(addbookmarktitle)" aria-label="$tl(addbookmarktitle)"></li>
